# crosslinux

./: .gitignore  Kconfig-bootcfg.in  Kconfig-xtcfg.in  Kconfig.in  Licenses.txt  Makefile.in  README  bootstrap  cl-bt.in  configure  configure.ac  setenv.sh.in
boards/: Kconfig.in
boards/beagle_bone/: bld-tardir.sh  bld-tarfile.sh  uEnv.txt
boards/pc_i486/: bld-iso9660-img.sh  linux-2.6.32.60.cfg
boards/pc_i686/: bld-iso9660-dir.sh
boards/pc_x86_64/: bld-iso9660-dir.sh  bld-iso9660-img.sh
doc/: 00_Introduction.txt  01_Licenses.txt  11_How_To_Install_crosslinux.txt  12_How_To_Setup_crosstool-NG.txt  15_How_To_Debian_Host.txt  21_How_To_Use_crosslinux.txt  32_How_To_Contribute.txt  A1_Credits.txt  A2_Known_Issues_And_Problems.txt  COPYING-documents  cl-bt.1.in
host-tools/: Makefile  Makefile.in
integ/crosstool-ng-1.18.0/: export-manifest.patch  syscall.patch  tools-patches.tbz
integ/crosstool-ng-1.19.0/: export-manifest.patch  mpz__t-scan.c.patch  mpz__t-scan.c.patch.README  tools-patches.tbz
integ/ttylinux-bbone-16.2/: crosstool-ng.config
integ/ttylinux-bbone-2014.10/: crosslinux-config.sh  crosstool-ng.config  site.tbz
integ/ttylinux-i486-16.2/: crosslinux-config.sh  crosstool-ng.config  site.tbz
integ/ttylinux-i486-16.3/: crosstool-ng.config
integ/ttylinux-i486-2014.10/: crosstool-ng.config
integ/ttylinux-i486-2014.11/: crosslinux-config.sh  crosstool-ng.config  site.tbz
integ/ttylinux-i486-2015.01/: crosslinux-config.sh  site.tbz
integ/ttylinux-i486-2015.02/: site.tbz
integ/ttylinux-i686-2014.10/: crosslinux-config.sh  crosstool-ng.config  site.tbz
integ/ttylinux-i686-2014.11/: crosslinux-config.sh  site.tbz
integ/ttylinux-i686-2015.01/: crosslinux-config.sh  site.tbz
integ/ttylinux-i686-2015.02/: crosslinux-config.sh  site.tbz
integ/ttylinux-pc_i486/: crosslinux-config.sh  crosstool-ng.config
integ/ttylinux-x86_64-16.2/: crosslinux-config.sh  crosstool-ng.config  site.tbz
integ/ttylinux-x86_64-2014.10/: crosslinux-config.sh  crosstool-ng.config  site.tbz
integ/ttylinux-x86_64-2014.11/: crosslinux-config.sh  site.tbz
integ/ttylinux-x86_64-2015.01/: crosslinux-config.sh  crosstool-ng.config  site.tbz
integ/ttylinux-x86_64-2015.02/: crosslinux-config.sh  site.tbz
kconfig/: Makefile.in  configure
kconfig/docs/: Makefile.in
kconfig/frontends/: Makefile.in
kconfig/frontends/conf/: Makefile.in
kconfig/frontends/gconf/: Makefile.in
kconfig/frontends/mconf/: Makefile.in
kconfig/frontends/nconf/: Makefile.in
kconfig/frontends/qconf/: Makefile.in
kconfig/libs/: Makefile.in
kconfig/libs/images/: Makefile.in
kconfig/libs/lxdialog/: Makefile.in
kconfig/libs/parser/: Makefile.in
kconfig/scripts/: Makefile.in
kconfig/utils/: Makefile.in
loaders/: Kconfig-loaders.in
loaders/isolinux/: bld.sh
loaders/syslinux-6.00/: bld.sh
loaders/syslinux-6.01/: bld.sh  isolinux.cfg
pkg-cfg/: Kconfig-bootcfg.in  Kconfig-loaders.in  Kconfig-pkgcfg.in  Kconfig-xtcfg.in  Kconfig.in
pkg-cfg/alsa-lib-1.0.28/: Kconfig  bld.sh  files
pkg-cfg/alsa-utils-1.0.28/: Kconfig  bld.sh  files
pkg-cfg/bash-4.2/: Kconfig  bld.sh  files
pkg-cfg/binutils-2.23/: Kconfig  bld.sh  files
pkg-cfg/busybox-1.21.0/: Kconfig  _bbox-stnd.cfg  bld.sh  files  rootfs.tar.bz2
pkg-cfg/busybox-1.22.1/: Kconfig  _bbox-stnd-losetup.cfg  _bbox-stnd.cfg  _bbox-suid.cfg  bld.sh  files  rootfs.tar.bz2
pkg-cfg/calc-2.12.4.13/: Kconfig  bld.sh  files
pkg-cfg/cloog-0.16.1/: Kconfig  bld.sh  files
pkg-cfg/crosslinux-basefs/: Kconfig  bld.sh  files  rootfs.tar.bz2
pkg-cfg/crosslinux-devfs/: Kconfig  bld.sh  files
pkg-cfg/crosslinux-libc/: Kconfig  bld.sh  files
pkg-cfg/crosslinux-libc-devel/: Kconfig  bld.sh
pkg-cfg/crosslinux-utils/: Kconfig  bld.sh
pkg-cfg/dropbear-2013.58/: Kconfig  bld.sh
pkg-cfg/dropbear-2013.58/patch/: options.patch
pkg-cfg/dropbear-2014.63/: Kconfig  bld.sh  files  rootfs.tar.bz2
pkg-cfg/dropbear-2014.63/patch/: options.patch
pkg-cfg/dtach-0.8/: Kconfig  bld.sh  files
pkg-cfg/dvtm-0.11/: Kconfig  bld.sh  files
pkg-cfg/e2fsprogs-1.42.7/: Kconfig  bld.sh
pkg-cfg/e2fsprogs-1.42.8/: Kconfig  bld.sh
pkg-cfg/e2fsprogs-1.42.9/: Kconfig  bld.sh  files
pkg-cfg/gcc-4.7.3/: Kconfig  bld.sh  files
pkg-cfg/gmp-5.0.5/: Kconfig  bld.sh  files
pkg-cfg/gpm-1.20.7/: Kconfig  bld.sh  files  rootfs.tar.bz2
pkg-cfg/haserl-0.9.32/: Kconfig  bld.sh  files
pkg-cfg/iptables-1.4.18/: Kconfig  bld.sh  files  rootfs.tar.bz2
pkg-cfg/kmod-13/: Kconfig  bld.sh  files
pkg-cfg/kmod-16/: Kconfig  bld.sh  files
pkg-cfg/lilo-23.2/: Kconfig  bld.sh  files  rootfs.tar.bz2
pkg-cfg/lilo-24.0/: Kconfig  bld.sh  rootfs.tar.bz2
pkg-cfg/lua-5.2.3/: Kconfig  bld.sh  files
pkg-cfg/lynx-2.8.8/: Kconfig  bld.sh  files
pkg-cfg/make-4.0/: Kconfig  bld.sh  files
pkg-cfg/mpc-1.0.1/: Kconfig  bld.sh  files
pkg-cfg/mpfr-3.1.1/: Kconfig  bld.sh  files
pkg-cfg/nano-2.3.2/: Kconfig  bld.sh  files
pkg-cfg/ncurses-5.9/: Kconfig  bld.sh  files
pkg-cfg/ntfs-3g-ntfsprogs-2014.2.15/: Kconfig  bld.sh  files
pkg-cfg/ppl-0.11/: Kconfig  bld.sh  files
pkg-cfg/ppp-2.4.5/: Kconfig  bld.sh  files
pkg-cfg/readline-6.3/: Kconfig  bld.sh  files
pkg-cfg/retawq-0.2.6c/: Kconfig  bld.sh  files
pkg-cfg/syslinux-6.01/: bld.sh  boot.msg
pkg-cfg/thttpd-2.25b/: Kconfig  bld.sh  files
pkg-cfg/tree-1.7.0/: Kconfig  bld.sh  files
pkg-cfg/ttylinux-utils-1.6/: Kconfig  bld.sh  files  rootfs.tar.bz2
pkg-cfg/uboot-2012.10/: bld.sh
pkg-cfg/uboot-2014.01/: bld.sh
pkg-cfg/udev-182/: Kconfig  bld.sh  files
pkg-cfg/util-linux-2.23/: Kconfig  bld.sh  files
pkg-cfg/util-linux-2.24/: Kconfig  bld.sh
pkg-cfg/xbt-eglibc/: bld.sh
pkg-cfg/xbt-glibc/: bld.sh
scripts/: _constants.sh.in  _functions.sh.in  _xbt_env_clr  _xbt_env_set  bld-bootfs.sh.in  bld-bootimg.sh.in  bld-clean.sh.in  bld-init.sh.in  bld-kernel-install-modules.sh.in  bld-kernel.sh.in  bld-loader.sh.in  bld-packages.sh.in  bld-pkgs-install.sh.in  bld-pkgs.sh.in  bld-rootfs.sh.in  bld-srcimg.sh.in  bt-init.sh.in  utl-dload.sh.in
ttylinux-bbone-2014.10/: site.tbz
(+5 files in other folders)
